plugins {
    id 'java'
}

group 'UntitledGroup'
version '1.0-SNAPSHOT'

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    // https://mvnrepository.com/artifact/com.google.guava/guava
    implementation group: 'com.google.guava', name: 'guava', version: '28.1-jre'

    // https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core
    compile group: 'org.jgrapht', name: 'jgrapht-core', version: '1.3.1'

    // https://mvnrepository.com/artifact/org.junit.jupiter
    testImplementation  group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.6.0-M1'
    testImplementation  group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0-M1'
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.0-M1'
}

test {
    useJUnitPlatform {
        includeEngines 'junit-jupiter'
    }
}
